--- a/product-page.html
+++ b/product-page.html
@@ -235,7 +235,23 @@
                                 Musclefit Pancake Proteico Preparato Fast facile e veloce 250g per la tua colazione Fit
                                 (Original)
                             </h1>
-                            <p class="productcode"><span>Cod:</span> 88-5268 lk</p>
+                            
+                            <div class="sellratbox">
+                                <div class="seller">
+                                    <img src="img/product/avatar.svg" alt="avatar">
+                                    <p>Seller: <span>Ecovent</span></p>
+                                </div>
+                                <div class="ratingresponse">
+                                    <div class="stars">
+                                        <img src="img/category/star.svg" alt="">
+                                        <img src="img/category/star.svg" alt="">
+                                        <img src="img/category/star.svg" alt="">
+                                        <img src="img/category/star.svg" alt="">
+                                        <img src="img/category/star-emp.svg" alt="">
+                                    </div>
+                                    <span>(22 response)</span>
+                                </div>
+                            </div>
                             <p class="productinfo__price">
                                 $ 20.99
                             </p>
@@ -259,23 +275,8 @@
 
                                 <a href="#" class="greenbtn">Add to cart</a>
                             </div>
-                            <div class="sellratbox">
-                                <div class="seller">
-                                    <img src="img/product/avatar.svg" alt="avatar">
-                                    <p>Seller: <span>Ecovent</span></p>
-                                </div>
-                                <div class="ratingresponse">
-                                    <div class="stars">
-                                        <img src="img/category/star.svg" alt="">
-                                        <img src="img/category/star.svg" alt="">
-                                        <img src="img/category/star.svg" alt="">
-                                        <img src="img/category/star.svg" alt="">
-                                        <img src="img/category/star-emp.svg" alt="">
-                                    </div>
-                                    <span>(22 response)</span>
-                                </div>
-                            </div>
-
+                            
+                            <p class="productcode"><span>SKU:</span> 88-5268 lk</p>
                             <!-- upd1 -->
                             <div class="productinfo__alergyfree">
                                 <p class="title">
