--- a/category-page.html
+++ b/category-page.html
@@ -128,17 +128,27 @@
             </div>
         </div>
 
-        <section class="smallpageinf">
+        <section class="smallpageinf category">
             <div class="container">
-                <div class="smallpageinf__wrap">
+                <!-- <div class="smallpageinf__wrap">
                     <picture>
                         <source srcset="img/category/catpageimg-mob.png" media="(max-width: 575px)">
                         <img src="img/category/catpageimg.jpg" alt="img">
                     </picture>
 
 
-                    <!-- catpageimg-mob -->
                     <h1>Product for special</h1>
+                </div> -->
+                <div class="reccatnamewrap">
+                    <img src="img/recipes/catname-bg.jpg" alt="bg">
+                    <div class="reccatnamewrap__title">
+                        <p>
+                            Product for special
+                        </p>
+                    </div>
+                    <div class="reccatnamewrap__img">
+                        <img src="img/category/category-mainpic.png" alt="img">
+                    </div>
                 </div>
             </div>
         </section>
