--- a/sitemap.html
+++ b/sitemap.html
@@ -16,9 +16,13 @@
         <div class="updatesblock">
             <ul style="margin-bottom: 40px;">
                 <li><h3>latest updates</h3></li>
+                <p>Approval new product for admin</p>
+                <li><a target="_blank" href="emails-new/email-admin-product-approval.html">Approval new product for admin</a></li>
+                <li><a target="_blank" href="emails-new/email-pending-approval.html">Pending approval for user</a></li>
+                <br>
                 <p>Admin/Product approval</p>
                 <li><a target="_blank" href="admin-product-approval.html">Admin/Product approval</a></li>
-
+                <br>
                 <p>-SKU|AISN-</p>
                 <li><a target="_blank" href="product-page.html">Product page</a></li>
                 <li><a target="_blank" href="seller-acc-product-list-addproduct.html">Seller Account / Product list - Add Product</a></li>
@@ -28,7 +32,6 @@
                 <li><a target="_blank" href="category-page.html">Category page</a></li>
 
                 
-
                 <!-- <li><a target="_blank" href="my-account-recent-orders.html">My Account - Recent Orders</a></li>
                 <li><a target="_blank" href="category-page.html">Category page</a></li>
                 <li><a target="_blank" href="product-page.html">Product page</a></li>
