--- a/emails-new/email-pending-approval-for-user.html
+++ b/emails-new/email-pending-approval-for-user.html
@@ -22,39 +22,48 @@
             </tr>
             <tr>
                 <td width="100%">
-                    <img src="img/title-img2.png" alt="img" style="width: 100%;background-size:cover;">
+                    <img src="img/title-img4.png" alt="img" style="width: 100%;background-size:cover;">
                 </td>
             </tr>
             <tr>
                 <td width="100%" style="padding: 60px 17px 0px; text-align: center;background: #fff;">
-                    <img src="img/send-clock.png" alt="img" style="width: 85px;height:85px;background-size:cover;">
+                    <img src="img/completed-reject.png" alt="img"
+                        style="width: 85px;height:85px;background-size:cover;">
                 </td>
             </tr>
             <tr>
                 <td style="padding: 35px 17px 65px; text-align: center;background: #fff;">
                     <h1
                         style="margin: 0 0 17px;color: #21292F;text-align: center;font-family: Montserrat,sans-serif;font-size: 22px;font-style: normal;font-weight: 600;line-height: 114%;">
-                        Thanks for adding a new product
+                        Rejection of Your Product Submission
                     </h1>
                     <div class="descr"
                         style="color: #494949;text-align: center;font-family: Montserrat,sans-serif;font-size: 15px;           font-style: normal;font-weight: 400;line-height: 150%;">
-                        <p style="margin: 0 0 17px;">
-                            We have received your product for consideration and possible launch on our platform, and we
-                            want to inform you that it is currently under evaluation.
+                        <p style="margin: 0 0 17px 0;">
+                            We regret to inform you that after careful consideration, we have decided to reject your
+                            product submission for listing on our platform.
                         </p>
                         <p style="margin: 0 0 17px 0;">
-                            Our team is reviewing your product carefully to ensure it meets our quality and safety
-                            standards, as well as its potential value to our users. We are doing our best to provide you
-                            with a response and next steps as soon as possible.
+                            While we appreciate the effort and time you invested in developing your product,
+                            unfortunately, it does not meet our platform's quality standards or current needs.
                         </p>
-                        <p style="margin: 0 0 0 0;">
-                            Thank you for choosing our platform to host your product. We are confident that together we
-                            can achieve success.
+                        <p style="margin: 0 0 17px 0;">
+                            We understand that this news may be disappointing, and we want to assure you that our
+                            decision was made after thorough evaluation and consideration of various factors.
                         </p>
+                        <p style="margin: 0 0 17px 0;">
+                            If you have any questions regarding the rejection or would like specific feedback on areas
+                            for improvement, please feel free to reach out to us. We're here to provide assistance and
+                            support wherever possible.
+                        </p>
+                        <p style="margin: 0;">
+                            Thank you for your understanding and cooperation.
+                        </p>
+
                     </div>
                     <a href="#"
                         style="margin: 38px auto 0;border-radius: 60px;background:#158466;border:none;padding: 12px 22px;display: inline-block; color: #FFF;text-align: center;font-family: Inter,sans-serif;font-size: 14px;font-style: normal;                   font-weight: 700;line-height: normal;text-transform: uppercase;text-decoration: none;">
-                        View all products
+                        write to the manager
                     </a>
                 </td>
             </tr>
@@ -96,7 +105,7 @@
             </tr>
         </table>
     </div>
-    
+
 </body>
 
 </html>
