--- a/sitemap.html
+++ b/sitemap.html
@@ -16,9 +16,11 @@
         <div class="updatesblock">
             <ul style="margin-bottom: 40px;">
                 <li><h3>latest updates</h3></li>
-                <p>Approval new product for admin</p>
+                <p>Emails</p>
                 <li><a target="_blank" href="emails-new/email-admin-product-approval.html">Approval new product for admin</a></li>
                 <li><a target="_blank" href="emails-new/email-pending-approval.html">Pending approval for user</a></li>
+                <li><a target="_blank" href="emails-new/email-seller-approved-to-user.html">Seller approved to user </a></li>
+                <li><a target="_blank" href="emails-new/email-pending-approval.html">Pending approval for user </a></li>
                 <br>
                 <p>Admin/Product approval</p>
                 <li><a target="_blank" href="admin-product-approval.html">Admin/Product approval</a></li>
