--- a/emails-new/email-seller-approved-to-user.html
+++ b/emails-new/email-seller-approved-to-user.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pending approval for user</title>
+    <title>Seller approved to user</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
@@ -13,7 +13,7 @@
 <body style="padding:0px;margin:0px;background: #f5f5f5;padding: 40px 0;">
 
     <div style="max-width: 600px;width: 100%;margin:0 auto;">
-        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background: #FFF;">
+        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background: #FFF;border-spacing: 0;">
             <tr>
                 <th width="100%" style="padding:24px 16px;background: #FFF;">
                     <img src="img/food_green.png" alt="food" style="width: 92px; height: auto; background-size: cover;
@@ -22,34 +22,35 @@
             </tr>
             <tr>
                 <td width="100%">
-                    <img src="img/title-img2.png" alt="img" style="width: 100%;background-size:cover;">
+                    <img src="img/title-img3.png" alt="img" style="width: 100%;background-size:cover;">
                 </td>
             </tr>
             <tr>
                 <td width="100%" style="padding: 60px 17px 0px; text-align: center;background: #fff;">
-                    <img src="img/send-clock.png" alt="img" style="width: 85px;height:85px;background-size:cover;">
+                    <img src="img/completed.png" alt="img" style="width: 85px;height:85px;background-size:cover;">
                 </td>
             </tr>
             <tr>
                 <td style="padding: 35px 17px 65px; text-align: center;background: #fff;">
                     <h1
                         style="margin: 0 0 17px;color: #21292F;text-align: center;font-family: Montserrat,sans-serif;font-size: 22px;font-style: normal;font-weight: 600;line-height: 114%;">
-                        Thanks for adding a new product
+                        Thank you for waiting product published
                     </h1>
                     <div class="descr"
                         style="color: #494949;text-align: center;font-family: Montserrat,sans-serif;font-size: 15px;           font-style: normal;font-weight: 400;line-height: 150%;">
-                        <p style="margin: 0 0 17px;">
-                            We have received your product for consideration and possible launch on our platform, and we
-                            want to inform you that it is currently under evaluation.
+                        <p style="margin: 0 0 17px 0; padding: 0;">
+                            We are pleased to inform you that your product has been successfully approved for listing on
+                            our platform. Your product meets all our quality and safety standards, and we are confident
+                            that it will be valuable to our users.
                         </p>
                         <p style="margin: 0 0 17px 0;">
-                            Our team is reviewing your product carefully to ensure it meets our quality and safety
-                            standards, as well as its potential value to our users. We are doing our best to provide you
-                            with a response and next steps as soon as possible.
+                            This marks a significant step forward in our collaboration, and we are thrilled to be
+                            working with you. We believe that your product will find its audience on our platform and
+                            will be mutually beneficial for both parties.
                         </p>
-                        <p style="margin: 0 0 0 0;">
-                            Thank you for choosing our platform to host your product. We are confident that together we
-                            can achieve success.
+                        <p style="margin: 0">
+                            Thank you for your talent and effort invested in developing this product, and for the trust
+                            you have shown in our platform.
                         </p>
                     </div>
                     <a href="#"
@@ -96,7 +97,7 @@
             </tr>
         </table>
     </div>
-    
+
 </body>
 
 </html>
