--- a/index.html
+++ b/index.html
@@ -894,12 +894,18 @@
                 <p>
                     © 2023 · Food. All Rights Reserved
                 </p>
-                <ul>
-                    <li><a href="#"><img src="img/footer/fb.svg" alt="facebook"></a></li>
-                    <li><a href="#"><img src="img/footer/tw.svg" alt="facebook"></a></li>
-                    <li><a href="#"><img src="img/footer/ln.svg" alt="facebook"></a></li>
-                    <li><a href="#"><img src="img/footer/yt.svg" alt="facebook"></a></li>
-                </ul>
+                <div class="footer__social">
+                    <div class="footersubscribe">
+                        <input type="text" placeholder="Ender your email here">
+                        <button>Subscribe</button>
+                    </div>
+                    <ul>
+                        <li><a href="#"><img src="img/footer/fb.svg" alt="facebook"></a></li>
+                        <li><a href="#"><img src="img/footer/tw.svg" alt="facebook"></a></li>
+                        <li><a href="#"><img src="img/footer/ln.svg" alt="facebook"></a></li>
+                        <li><a href="#"><img src="img/footer/yt.svg" alt="facebook"></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </footer>
