Blog post  share icons / Sign up text description

--- a/sign-up.html
+++ b/sign-up.html
@@ -19,6 +19,32 @@
             <div class="signcontent">
                 <p class="title">Sign up</p>
                 <p class="subtitle">Register your account</p>
+                <div class="signcontent__description">
+                    <h4>
+                        Brokers
+                    </h4>
+                    <p>
+                        Brokers, Wholesales, Foodservice, Retailers
+                        With one click you can be connected to manufacturers, distributors, and the brand source of
+                        specialty foods. Gluten-free, sugar-free, allergy free, low sodium – if it’s a special food, we
+                        have it!
+                    </p>
+                    <p>
+                        Order and reorder on-line without the hassle of supply chain disruptions. Your customers will
+                        marvel at the efficiency of having the products they need in stock at all times irrespective of
+                        weather and other conditions.
+                    </p>
+                    <p>
+                        <a href="#">Sign up here</a> for your personal account and take charge of your  inventory of specialty foods.
+                    </p>
+                    <p>
+                        Visit and Revisit to find the products you need as well as take advantage of the special
+                        promotions the Ess Gezunt website offers.
+                    </p>
+                    <p>
+                        Welcome to a new day  in maintaining your supply of specialty foods!
+                    </p>
+                </div>
                 <div class="logbtngroup">
                     <a href="#">
                         <i class="fa-brands fa-google"></i>
@@ -79,7 +105,7 @@
                             </svg>
                         </span>
                     </div>
-                   
+
                     <input type="submit" class="greenbtn formbtn" value="Sign up">
                     <div class="signuptext">
                         <p>Add a link already a user? <a href="#">Sign In</a></p>
