--- a/blog-post.html
+++ b/blog-post.html
@@ -165,13 +165,12 @@
                                     <div class="share">
                                         <span>share:</span>
                                         <ul>
-                                            <li><a href="#" target="_blank"><img src="img/general/fb-white.svg"
-                                                        alt="facebook"></a>
+                                            <li><a href="#" target="_blank"><img src="img/general/whatsup-white.svg" alt="whats up"></a>
                                             </li>
-                                            <li><a href="#" target="_blank"><img src="img/general/inst-white.svg"
-                                                        alt="instagram"></a></li>
-                                            <li><a href="#" target="_blank"><img src="img/general/tg-white.svg"
-                                                        alt="telegram"></a>
+                                            <li><a href="#" target="_blank"><img src="img/general/fb-white.svg" alt="facebook"></a>
+                                            </li>
+                                            <li><a href="#" target="_blank"><img src="img/general/inst-white.svg" alt="instagram"></a></li>
+                                            <li><a href="#" target="_blank"><img src="img/general/in-white.svg" alt="linkedin"></a>
                                             </li>
                                         </ul>
                                     </div>
