--- a/product-page.html
+++ b/product-page.html
@@ -601,6 +601,21 @@
                                             Gezunt suggests that manufacturers post all health features as well as
                                             kosher certifications
                                         </p>
+                                        <div class="ingredientslist">
+                                            <p class="title">Ingredients</p>
+                                            <ul>
+                                                <li>Sugar</li>
+                                                <li>Wheat</li>
+                                                <li>Butter</li>
+                                                <li>Chocolate</li>
+                                                <li>Apple Cider</li>
+                                                <li>Cinnamon</li>
+                                                <li>Viegin coconut oil</li>
+                                                <li>Blanched almond flour</li>
+                                                <li>Creamed coconut (pure coconut)</li>
+                                                <li>Unsweetened chocolate</li>
+                                            </ul>
+                                        </div>
                                     </div>
 
                                 </div>
