--- a/product-page.html
+++ b/product-page.html
@@ -276,7 +276,14 @@
                                 <a href="#" class="greenbtn">Add to cart</a>
                             </div>
                             
-                            <p class="productcode"><span>SKU:</span> 88-5268 lk</p>
+                            <div class="productcode">
+                                <p>
+                                    <span>SKU:</span> 88-5268 lk
+                                </p>
+                                <p>
+                                    Order today and have it shipped by <span>11 agosto</span>
+                                </p>
+                            </div>
                             <!-- upd1 -->
                             <div class="productinfo__alergyfree">
                                 <p class="title">
