--- a/product-page.html
+++ b/product-page.html
@@ -255,6 +255,28 @@
                             <p class="productinfo__price">
                                 $ 20.99
                             </p>
+
+                            <div class="product-cases">
+                                <div class="product-case">
+                                    <input type="radio" name="prcase" id="prcase1" checked>
+                                    <label for="prcase1">
+                                        <p>
+                                            Case “Name1”
+                                            <span>$13.99 Ounce</span>
+                                        </p>
+                                    </label>
+                                </div>
+                                <div class="product-case">
+                                    <input type="radio" name="prcase" id="prcase2">
+                                    <label for="prcase2">
+                                        <p>
+                                            Case “Name2”
+                                            <span>$21.99 Ounce</span>
+                                        </p>
+                                    </label>
+                                </div>
+                            </div>
+
                             <div class="productinfo__descr">
                                 <p>
                                     Etiam non nunc vehicula, facilisis nunc vitae, tristique leo. Suspendisse lectus
@@ -275,6 +297,40 @@
 
                                 <a href="#" class="greenbtn">Add to cart</a>
                             </div>
+
+                            <div class="productselects">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <div class="productselect">
+                                            <p>Pack quantity</p>
+                                            <div class="generalselect">
+                                                <select class="customselect" name="category">
+                                                    <option value="0">Pack Quantity: 1</option>
+                                                    <option value="1">Pack Quantity: 2</option>
+                                                    <option value="2">Pack Quantity: 5</option>
+                                                    <option value="3">Pack Quantity: 10</option>
+                                                    <option value="4">Pack Quantity: 15</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="productselect">
+                                            <p>Size</p>
+                                            <div class="generalselect">
+                                                <select class="customselect" name="category">
+                                                    <option value="0">Size Pack: 100 ml</option>
+                                                    <option value="1">Size Pack: 200 ml</option>
+                                                    <option value="2">Size Pack: 500 ml</option>
+                                                    <option value="3">Size Pack: 1000 ml</option>
+                                                    <option value="4">Size Pack: 2000 ml</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                             
                             <div class="productcode">
                                 <p>
