--- a/my-account-recent-orders.html
+++ b/my-account-recent-orders.html
@@ -288,6 +288,8 @@
                                                 <a href="#" class="bordergreenbtn">Buy again</a>
                                                 <a href="#" class="bordergreenbtn" data-bs-toggle="modal"
                                                     data-bs-target="#custserv">Customer Servise</a>
+                                                <a href="#" class="bordergreenbtn" data-bs-toggle="modal"
+                                                    data-bs-target="#recentorderspopup">Customer Servise</a>
                                             </div>
                                         </div>
                                         <div class="myacc-delivered">
@@ -319,6 +321,8 @@
                                                 <a href="#" class="bordergreenbtn">Buy again</a>
                                                 <a href="#" class="bordergreenbtn" data-bs-toggle="modal"
                                                     data-bs-target="#custserv">Customer Servise</a>
+                                                <a href="#" class="bordergreenbtn" data-bs-toggle="modal"
+                                                    data-bs-target="#recentorderspopup">Customer Servise</a>
                                             </div>
                                         </div>
                                         <div class="myacc-delivered">
@@ -347,6 +351,10 @@
                                             <div class="myacc-delivered__right">
                                                 <a href="#" class="bordergreenbtn">Write a review</a>
                                                 <a href="#" class="bordergreenbtn">Buy again</a>
+                                                <a href="#" class="bordergreenbtn" data-bs-toggle="modal"
+                                                    data-bs-target="#custserv">Customer Servise</a>
+                                                <a href="#" class="bordergreenbtn" data-bs-toggle="modal"
+                                                    data-bs-target="#recentorderspopup">Customer Servise</a>
                                             </div>
                                         </div>
                                     </div>
@@ -467,7 +475,108 @@
             </div>
         </div>
     </div>
-    
+
+
+    <!-- recentorderspopup -->
+
+    <div class="modal fade generalmodal largemodal prapprmodal" id="recentorderspopup" tabindex="-1"
+        aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="productdetails">
+                    <div class="closedetails" data-bs-dismiss="modal" aria-label="Close">
+                        <img src="img/account/close.svg" alt="close">
+                    </div>
+                    <div class="title">Product details</div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="recorder__infoblock">
+                                <p class="rotitle">
+                                    Number
+                                    <span>Order No. 517547571</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="recorder__infoblock">
+                                <div class="row g-0 justify-content-between">
+                                    <div class="recorder__infobox">
+                                        <p class="rotitle">
+                                            Address
+                                        </p>
+                                        <p>
+                                            via Bordina 6, Bergamo, PG 06034 <br>
+                                            Bergamo, PG 06034 <br>
+                                            English
+                                        </p>
+                                        <a href="tel:+12234567890">+1 223 456 7890</a>
+                                    </div>
+                                    <div class="recorder__infobox">
+                                        <p class="rotitle">
+                                            Payment method
+                                        </p>
+                                        <div class="cardhead">
+                                            <img src="img/account/cardicon.png" alt="img">
+                                            <p>
+                                                MC **** 3033
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="recorder__infobox">
+                                        <p class="rotitle">
+                                            Order summary
+                                        </p>
+                                        <ul>
+                                            <li>
+                                                <span class="listinfo">Item(s) Subtotal:</span>
+                                                <span class="listprice"> $29,18</span>
+                                            </li>
+                                            <li>
+                                                <span class="listinfo">Postage & Packing:</span>
+                                                <span class="listprice">$3,27</span>
+                                            </li>
+                                            <li>
+                                                <span class="listinfo"><b>Total:</b></span>
+                                                <span class="listprice"><b>$22.30</b></span>
+                                            </li>
+                                        </ul>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="recorder__infoblock">
+                                <p class="rotitle">
+                                    About order
+                                </p>
+                                <div class="roaboutorder">
+                                    <div class="imgwrap">
+                                        <img src="img/header/headercartimg.png" alt="img">
+                                    </div>
+                                    <div class="description">
+                                        <p class="name">
+                                            Light - With low carbohydrates - Fruit Carb Fitness SyrupMax...
+                                        </p>
+                                        <p>
+                                            Weight: 0.45 kg
+                                        </p>
+                                    </div>
+                                    <div class="prices">
+                                        <p class="price">$ 15.77</p>
+                                        <p class="oldprice">$ 25.12</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script src="js/lib/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="js/lib/swiper.js"></script>
