--- a/sitemap.html
+++ b/sitemap.html
@@ -15,7 +15,10 @@
     <div class="sitemap">
         <div class="updatesblock">
             <ul style="margin-bottom: 40px;">
-                <li><h3>latest updates</h3></li>
+                
+                <li><h3>Latest updates</h3></li>
+                <li><a target="_blank" href="my-account-recent-orders.html">My Account - Recent Orders</a></li>
+                <br>
                 <p>Emails</p>
                 <li><a target="_blank" href="emails-new/email-admin-product-approval.html">Approval new product for admin</a></li>
                 <li><a target="_blank" href="emails-new/email-pending-approval.html">Pending approval for user</a></li>
